--- a/Exercicios/Ex022/fundo07.html
+++ b/Exercicios/Ex022/fundo07.html
@@ -7,12 +7,22 @@
     <title>Alinhamento vertical</title>
     <style>
         #container{
+            background-image: url(imagens/);
+            position: relative;
             height: 500px;
             background-color: purple;
+            padding: 10px;
         }
         #conteudo{
-            height: 200px;
+            position: absolute;
+            height: 50%;
+            width: 50%;
             background-color: yellow;
+            left:50%;
+            top:50%;
+            transform:translate(-50%, -50%) ;
+            /*margin: auto;*/
+
         }
     </style>
 </head>
